force-app/main/default/objects/Agent_Log__c/Agent_Log__c.object-meta.xml
<CustomObject>
    <description>Audit log of agent action invocations - what ran, with what outcome.</description>
    <label>Agent Log</label>
    <nameField>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>