force-app/main/default/objects/Agent_Log__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <label>Candidate</label>
    <type>Lookup</type>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Agent Logs</relationshipLabel>
    <relationshipName>Agent_Logs</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>