force-app/main/default/objects/Agent_Log__c/fields/Duration_ms__c.field-meta.xml
<CustomField>
    <fullName>Duration_ms__c</fullName>
    <label>Duration (ms)</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
</CustomField>