force-app/main/default/objects/Agent_Log__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <label>Error</label>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>