force-app/main/default/objects/Agent_Log__c/fields/Input__c.field-meta.xml
<CustomField>
    <fullName>Input__c</fullName>
    <label>Input</label>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>