force-app/main/default/objects/Agent_Log__c/fields/Output__c.field-meta.xml
<CustomField>
    <fullName>Output__c</fullName>
    <label>Output</label>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>