force-app/main/default/objects/Agent_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Success</fullName><default>true</default><label>Success</label></value>
            <value><fullName>Failure</fullName><default>false</default><label>Failure</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>